--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "math-camp-timer",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "^16.8.4",
     "react-circular-progressbar": "^1.0.0",
